--- a/CellEnMon/libs/dutch/link/parser.ipynb
+++ b/CellEnMon/libs/dutch/link/parser.ipynb
@@ -728,7 +728,179 @@
       "900000\n",
       "1000000\n",
       "1100000\n",
-      "1200000\n"
+      "1200000\n",
+      "1300000\n",
+      "1400000\n",
+      "Done Processing VUDJ-AbTw\n",
+      "Processing kZHq-VVpm\n",
+      "0\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "500000\n",
+      "600000\n",
+      "700000\n",
+      "800000\n",
+      "900000\n",
+      "1000000\n",
+      "1100000\n",
+      "1200000\n",
+      "1300000\n",
+      "1400000\n",
+      "Done Processing kZHq-VVpm\n",
+      "Processing XDFN-fApg\n",
+      "0\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "500000\n",
+      "600000\n",
+      "700000\n",
+      "800000\n",
+      "900000\n",
+      "1000000\n",
+      "1100000\n",
+      "1200000\n",
+      "1300000\n",
+      "1400000\n",
+      "Done Processing XDFN-fApg\n",
+      "Processing SnEB-NCJG\n",
+      "0\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "500000\n",
+      "600000\n",
+      "700000\n",
+      "800000\n",
+      "900000\n",
+      "1000000\n",
+      "1100000\n",
+      "1200000\n",
+      "1300000\n",
+      "1400000\n",
+      "Done Processing SnEB-NCJG\n",
+      "Processing KiPV-MsiE\n",
+      "0\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "500000\n",
+      "600000\n",
+      "700000\n",
+      "800000\n",
+      "900000\n",
+      "1000000\n",
+      "1100000\n",
+      "1200000\n",
+      "1300000\n",
+      "1400000\n",
+      "Done Processing KiPV-MsiE\n",
+      "Processing jwZI-vcWP\n",
+      "0\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "500000\n",
+      "600000\n",
+      "700000\n",
+      "800000\n",
+      "900000\n",
+      "1000000\n",
+      "1100000\n",
+      "1200000\n",
+      "1300000\n",
+      "1400000\n",
+      "Done Processing jwZI-vcWP\n",
+      "Processing Iolf-MlBu\n",
+      "0\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "500000\n",
+      "600000\n",
+      "700000\n",
+      "800000\n",
+      "900000\n",
+      "1000000\n",
+      "1100000\n",
+      "1200000\n",
+      "1300000\n",
+      "1400000\n",
+      "Done Processing Iolf-MlBu\n",
+      "Processing MlBu-Iolf\n",
+      "0\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "500000\n",
+      "600000\n",
+      "700000\n",
+      "800000\n",
+      "900000\n",
+      "1000000\n",
+      "1100000\n",
+      "1200000\n",
+      "1300000\n",
+      "1400000\n",
+      "Done Processing MlBu-Iolf\n",
+      "Processing vcWP-jwZI\n",
+      "0\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "500000\n",
+      "600000\n",
+      "700000\n",
+      "800000\n",
+      "900000\n",
+      "1000000\n",
+      "1100000\n",
+      "1200000\n",
+      "1300000\n",
+      "1400000\n",
+      "Done Processing vcWP-jwZI\n",
+      "Processing kZHq-eWiD\n",
+      "0\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "500000\n",
+      "600000\n",
+      "700000\n",
+      "800000\n",
+      "900000\n",
+      "1000000\n",
+      "1100000\n",
+      "1200000\n",
+      "1300000\n",
+      "1400000\n",
+      "Done Processing kZHq-eWiD\n",
+      "Processing sbeU-wmlS\n",
+      "0\n",
+      "100000\n",
+      "200000\n",
+      "300000\n",
+      "400000\n",
+      "500000\n",
+      "600000\n",
+      "700000\n",
+      "800000\n",
+      "900000\n",
+      "1000000\n",
+      "1100000\n",
+      "1200000\n",
+      "1300000\n",
+      "1400000\n"
      ]
     }
    ],
